# frame-contrib

./: .gitignore  Cargo.toml  README.md
.config/: zepter.yaml
.github/workflows/: ci.yml
mock-helpers/: Cargo.toml
mock-helpers/src/: assets.rs  balances.rs  lib.rs  listings.rs
pallets/black-hole/: Cargo.toml  README.md
pallets/black-hole/src/: address_mapper.rs  benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/communities/: Cargo.toml  README.md
pallets/communities/src/: benchmarking.rs  extensions.rs  functions.rs  impls.rs  lib.rs  mock.rs  origin.rs  types.rs  verifier.rs  weights.rs
pallets/communities/src/tests/: governance.rs  helpers.rs  membership.rs  mod.rs  registry.rs  weights.rs
pallets/community-fees/: Cargo.toml
pallets/community-fees/src/: adapter.rs  extensions.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/content/: Cargo.toml  README.md
pallets/content/account-profile/: Cargo.toml  README.md
pallets/content/account-profile/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/content/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/fees/: Cargo.toml  README.md
pallets/fees/src/: adapter.rs  extensions.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/gas-burn/: Cargo.toml
pallets/gas-burn/src/: extensions.rs  lib.rs  mock.rs  tests.rs  traits.rs
pallets/gas-tank/: Cargo.toml
pallets/gas-tank/src/: extensions.rs  lib.rs  traits.rs
pallets/gas-transaction-payment/: Cargo.toml
pallets/gas-transaction-payment/src/: benchmarking.rs  extensions.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/listings/: Cargo.toml
pallets/listings/src/: benchmarking.rs  impls.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/orders/: Cargo.toml
pallets/orders/src/: benchmarking.rs  impls.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/pass/: Cargo.toml
pallets/pass/src/: benchmarking.rs  extension.rs  extensions.rs  filter.rs  impls.rs  lib.rs  mock.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/pass/src/mock/: authenticators.rs
pallets/payments/: Cargo.toml
pallets/payments/src/: benchmarking.rs  impls.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/referenda-tracks/: Cargo.toml
pallets/referenda-tracks/src/: benchmarking.rs  impls.rs  lib.rs  migration.rs  mock.rs  split_id.rs  tests.rs  weights.rs
pallets/template/: Cargo.toml
pallets/template/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
traits/: Cargo.toml
traits/authn/: Cargo.toml
traits/authn/proc/: Cargo.toml
traits/authn/proc/src/: lib.rs
traits/authn/src/: lib.rs  util.rs
traits/gas-tank/: Cargo.toml
traits/gas-tank/src/: impl_nonfungibles.rs  lib.rs  tests.rs
traits/listings/: Cargo.toml
traits/listings/src/: inventory.rs  item.rs  lib.rs  test_utils.rs
traits/memberships/: Cargo.toml  README.md
traits/memberships/src/: hooks.rs  impl_nonfungibles.rs  impls.rs  lib.rs  tests.rs
traits/nonfungibles-helpers/: Cargo.toml
traits/nonfungibles-helpers/src/: lib.rs
traits/payments/: Cargo.toml
traits/payments/src/: lib.rs
traits/proof-verifier/: Cargo.toml
traits/proof-verifier/src/: lib.rs
traits/src/: lib.rs
traits/tracks/: Cargo.toml
traits/tracks/src/: lib.rs
