[workspace.package]
authors = ["Virto team <contact@virto.team>"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/virto-network/frame-contrib.git"

[workspace.dependencies]
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
  "derive",
] }
env_logger = { version = "0.11.3" }
impl-trait-for-tuples = { version = "0.2.2" }
log = { version = "0.4.22", default-features = false }
scale-info = { version = "2.11.3", default-features = false, features = [
  "derive",
] }
serde = { version = "1.0.203" }
syn = { version = "2" }
quote = { version = "1" }

fc-traits-authn = { path = "./traits/authn", default-features = false }
fc-traits-authn-proc = { path = "./traits/authn/proc", default-features = false }
fc-traits-gas-tank = { path = "./traits/gas-tank", default-features = false }
fc-traits-listings = { path = "./traits/listings", default-features = false }
fc-traits-nonfungibles-helpers = { path = "./traits/nonfungibles-helpers", default-features = false }
fc-traits-tracks = { path = "./traits/tracks", default-features = false }

frame-benchmarking = { git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409", default-features = false }
frame-support = { git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409", default-features = false }
frame-system = { git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409", default-features = false }

sp-core = { git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409", default-features = false }
sp-io = { git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409", default-features = false }
sp-runtime = { git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409", default-features = false }
sp-std = { git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409", default-features = false }

pallet-babe = { git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409", default-features = false }
pallet-balances = { git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409", default-features = false }
pallet-nfts = { git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409", default-features = false }
pallet-preimage = { git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409", default-features = false }
pallet-referenda = { git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409", default-features = false }
pallet-scheduler = { git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409", default-features = false }
pallet-timestamp = { git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409", default-features = false }
pallet-transaction-payment = { git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409", default-features = false }
pallet-utility = { git = "https://github.com/virto-network/polkadot-sdk", branch = "release-virto-stable2409", default-features = false }

[workspace]
resolver = "2"
members = [
  "pallets/gas-transaction-payment",
  "pallets/referenda-tracks",
  "pallets/template",
  "pallets/pass",
  "traits/authn",
  "traits/authn/proc",
  "traits/gas-tank",
    "traits/listings",
  "traits/memberships",
    "traits/nonfungibles-helpers",
  "traits/tracks",
]
