[workspace.package]
authors = ["Virto team <contact@virto.team>"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/virto-network/frame-contrib.git"

[workspace.dependencies]
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
  "derive",
] }
impl-trait-for-tuples = { version = "0.2.3" }
log = { version = "0.4.27", default-features = false }
scale-info = { version = "2.11.6", default-features = false, features = [
  "derive",
] }
serde = { version = "1.0.219", default-features = false }
syn = { version = "2.0.100" }
quote = { version = "1.0.40" }
proc-macro-crate = { version = "3.3.0" }

# FRAME Contrib
frame-contrib-traits = { path = "./traits", default-features = false }
fc-traits-authn = { path = "./traits/authn", default-features = false }
fc-traits-authn-proc = { path = "./traits/authn/proc", default-features = false }
fc-traits-gas-tank = { path = "./traits/gas-tank", default-features = false }
fc-traits-listings = { path = "./traits/listings", default-features = false }
fc-traits-memberships = { path = "./traits/memberships", default-features = false }
fc-traits-nonfungibles-helpers = { path = "./traits/nonfungibles-helpers", default-features = false }
fc-traits-payments = { path = "./traits/payments", default-features = false }
fc-traits-tracks = { path = "./traits/tracks", default-features = false }
fc-pallet-listings = { path = "./pallets/listings", default-features = false }
fc-pallet-payments = { path = "./pallets/payments", default-features = false }
fc-pallet-referenda-tracks = { path = "./pallets/referenda-tracks", default-features = false }
mock-helpers = { path = "./mock-helpers", default-features = false }

# Polkadot SDK
frame = { version = "0.10.0", package = "polkadot-sdk-frame", default-features = false, features = ["runtime"] }
frame-benchmarking = { version = "41.0.0", default-features = false }
frame-support = { version = "41.0.0", default-features = false }
frame-system = { version = "41.0.0", default-features = false }
pallet-assets = { version = "43.0.0", default-features = false }
pallet-assets-holder = { version = "0.3.0", default-features = false }
pallet-assets-freezer = { version = "0.8.0", default-features = false }
pallet-babe = { version = "41.0.0", default-features = false }
pallet-balances = { version = "42.0.0", default-features = false }
pallet-nfts = { version = "35.0.0", default-features = false }
pallet-preimage = { version = "41.0.0", default-features = false }
pallet-referenda = { version = "41.0.0", default-features = false }
pallet-scheduler = { version = "42.0.0", default-features = false }
pallet-timestamp = { version = "40.0.0", default-features = false }
pallet-transaction-payment = { version = "41.0.0", default-features = false }
sp-core = { version = "37.0.0", default-features = false }
sp-io = { version = "41.0.1", default-features = false }
sp-keystore = { version = "0.43.0", default-features = false }
sp-runtime = { version = "42.0.0", default-features = false }
xcm = { version = "17.0.0", package = "staging-xcm", default-features = false }

[workspace]
resolver = "2"
members = [
  "mock-helpers",
  "pallets/*",
  "traits",
  "traits/authn",
  "traits/authn/proc",
  "traits/gas-tank",
  "traits/listings",
  "traits/memberships",
  "traits/nonfungibles-helpers",
  "traits/payments",
  "traits/tracks",
]
