[workspace.package]
authors = ["Virto team <contact@virto.team>"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/virto-network/frame-contrib.git"

[workspace.dependencies]
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
  "derive",
] }
impl-trait-for-tuples = { version = "0.2.3" }
log = { version = "0.4.27", default-features = false }
scale-info = { version = "2.11.6", default-features = false, features = [
  "derive",
] }
serde = { version = "1.0.219", default-features = false }
syn = { version = "2.0.100" }
quote = { version = "1.0.40" }
proc-macro-crate = { version = "3.3.0" }

# FRAME Contrib
frame-contrib-traits = { path = "./traits", default-features = false }
fc-traits-authn = { path = "./traits/authn", default-features = false }
fc-traits-authn-proc = { path = "./traits/authn/proc", default-features = false }
fc-traits-gas-tank = { path = "./traits/gas-tank", default-features = false }
fc-traits-listings = { path = "./traits/listings", default-features = false }
fc-traits-memberships = { path = "./traits/memberships", default-features = false }
fc-traits-nonfungibles-helpers = { path = "./traits/nonfungibles-helpers", default-features = false }
fc-traits-payments = { path = "./traits/payments", default-features = false }
fc-pallet-listings = { path = "./pallets/listings", default-features = false }
fc-pallet-payments = { path = "./pallets/payments", default-features = false }
fc-pallet-referenda-tracks = { path = "./pallets/referenda-tracks", default-features = false }
mock-helpers = { path = "./mock-helpers", default-features = false }

# Polkadot SDK
frame = { version = "0.14.0", package = "polkadot-sdk-frame", default-features = false, features = ["runtime"] }
frame-benchmarking = { version = "45.0.0", default-features = false }
frame-support = { version = "45.0.0", default-features = false }
frame-system = { version = "45.0.0", default-features = false }
pallet-assets = { version = "48.0.0", default-features = false }
pallet-assets-holder = { version = "0.8.0", default-features = false }
pallet-assets-freezer = { version = "0.13.0", default-features = false }
pallet-babe = { version = "45.0.0", default-features = false }
pallet-balances = { version = "46.0.0", default-features = false }
pallet-nfts = { version = "39.0.0", default-features = false }
pallet-preimage = { version = "45.0.0", default-features = false }
pallet-referenda = { version = "45.0.0", default-features = false }
pallet-scheduler = { version = "46.0.0", default-features = false }
pallet-timestamp = { version = "44.0.0", default-features = false }
pallet-transaction-payment = { version = "45.0.0", default-features = false }
sp-core = { version = "39.0.0", default-features = false }
sp-io = { version = "44.0.0", default-features = false }
sp-keystore = { version = "0.45.0", default-features = false }
sp-runtime = { version = "45.0.0", default-features = false }
xcm = { version = "21.0.0", package = "staging-xcm", default-features = false }

[workspace]
resolver = "2"
members = [
  "mock-helpers",
  "pallets/*",
  "traits",
  "traits/authn",
  "traits/authn/proc",
  "traits/gas-tank",
  "traits/listings",
  "traits/memberships",
  "traits/nonfungibles-helpers",
  "traits/payments",
]
