[package]
authors.workspace = true
description = "A pallet that periodically burns the balance on its account"
edition.workspace = true
license.workspace = true
name = "fc-pallet-black-hole"
repository.workspace = true
version = "1.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec.workspace = true
frame.workspace = true
scale-info.workspace = true

[dev-dependencies]
pallet-balances.workspace = true

[features]
default = ["std"]
runtime-benchmarks = [
  "frame/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
]
std = [
  "codec/std",
  "frame/std",
  "pallet-balances/std",
  "scale-info/std",
]
try-runtime = [
  "frame/try-runtime",
  "pallet-balances/try-runtime",
]
