[package]
authors.workspace = true
description = "A pallet that periodically burns the balance on its account"
edition.workspace = true
license.workspace = true
name = "fc-pallet-black-hole"
repository.workspace = true
readme = "README.md"
version = "1.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec.workspace = true
frame.workspace = true
scale-info.workspace = true
pallet-revive = { workspace = true, optional = true }

[dev-dependencies]
pallet-balances.workspace = true

[features]
default = ["std", "revive"]
revive = ["pallet-revive"]
runtime-benchmarks = [
	"frame/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-revive?/runtime-benchmarks"
]
std = [
	"codec/std",
	"frame/std",
	"pallet-balances/std",
	"scale-info/std",
	"pallet-revive?/std"
]
try-runtime = [
	"frame/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-revive?/try-runtime"
]
