[package]
authors.workspace = true
description = "This pallet enables the creation of communities that are soverign entities with diverse forms of governance. In simpler terms, it can be considered a DAO Factory."
edition.workspace = true
license.workspace = true
name = "fc-pallet-communities"
repository.workspace = true
version = "1.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
frame-benchmarking = { workspace = true, optional = true }
frame-contrib-traits.workspace = true
frame-support.workspace = true
frame-system.workspace = true
log.workspace = true
scale-info = { workspace = true, features = ["derive"] }
serde = { optional = true, features = ["alloc", "derive"], workspace = true }
sp-runtime.workspace = true
xcm = { workspace = true, optional = true }

[dev-dependencies]
sp-core.workspace = true
sp-io.workspace = true
pallet-assets.workspace = true
pallet-assets-freezer.workspace = true
pallet-balances.workspace = true
pallet-nfts.workspace = true
pallet-preimage.workspace = true
pallet-referenda.workspace = true
fc-pallet-referenda-tracks = { workspace = true }
pallet-scheduler.workspace = true

[features]
default = ["std", "xcm", "serde"]
serde = ["dep:serde", "scale-info/serde"]
std = [
  "fc-pallet-referenda-tracks/std",
  "frame-benchmarking?/std",
  "frame-contrib-traits/std",
  "frame-support/std",
  "frame-system/std",
  "log/std",
  "pallet-assets/std",
  "pallet-assets-freezer/std",
  "pallet-balances/std",
  "pallet-nfts/std",
  "pallet-preimage/std",
  "pallet-referenda/std",
  "pallet-scheduler/std",
  "codec/std",
  "scale-info/std",
  "serde?/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "xcm?/std",
]
runtime-benchmarks = [
  "fc-pallet-referenda-tracks/runtime-benchmarks",
  "frame-benchmarking/runtime-benchmarks",
  "frame-contrib-traits/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-assets/runtime-benchmarks",
  "pallet-assets-freezer/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-nfts/runtime-benchmarks",
  "pallet-preimage/runtime-benchmarks",
  "pallet-referenda/runtime-benchmarks",
  "pallet-scheduler/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "xcm?/runtime-benchmarks"
]
try-runtime = [
  "fc-pallet-referenda-tracks/try-runtime",
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "pallet-assets/try-runtime",
  "pallet-assets-freezer/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-nfts/try-runtime",
  "pallet-preimage/try-runtime",
  "pallet-referenda/try-runtime",
  "pallet-scheduler/try-runtime",
  "sp-runtime/try-runtime",
]
