[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "fc-pallet-community-fees"
repository.workspace = true
version = "0.1.0"

[dependencies]
codec.workspace = true
frame.workspace = true
scale-info.workspace = true
sp-runtime.workspace = true

[dev-dependencies]
pallet-assets.workspace = true
pallet-balances.workspace = true
sp-io.workspace = true

[features]
default = ["std"]
runtime-benchmarks = [
	"frame/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"scale-info/std",
	"sp-io/std",
	"sp-runtime/std",
]
try-runtime = [
	"frame/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-balances/try-runtime",
]
