[package]
authors.workspace = true
description = "Allows transactions payment via a prepaid gas method."
edition.workspace = true
license.workspace = true
name = "fc-gas-tank"
repository.workspace = true
version = "1.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {workspace = true}
frame-benchmarking = {workspace = true, optional = true}
frame-support = {workspace = true}
frame-system = {workspace = true}
log = {workspace = true}
scale-info = {workspace = true}
serde = {workspace = true, optional = true}
sp-core = {workspace = true}
sp-runtime = {workspace = true}
sp-std = {workspace = true}

[dev-dependencies]
env_logger = {workspace = true}
pallet-balances = {workspace = true}
pallet-scheduler = {workspace = true}
pallet-transaction-payment = {workspace = true}
sp-io = {workspace = true}

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-scheduler/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
std = [
  "codec/std",
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "log/std",
  "pallet-balances/std",
  "pallet-scheduler/std",
  "scale-info/std",
  "serde",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-scheduler/try-runtime",
  "sp-runtime/try-runtime",
]
