[package]
authors.workspace = true
description = "Allows transactions payment via a prepaid gas method."
edition.workspace = true
license.workspace = true
name = "fc-pallet-gas-transaction-payment"
repository.workspace = true
version = "1.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {workspace = true}
fc-traits-gas-tank = {workspace = true}
frame-support = {workspace = true}
frame-system = {workspace = true}
scale-info = {workspace = true}
sp-runtime = {workspace = true}

[dev-dependencies]
pallet-balances = {workspace = true}
pallet-transaction-payment = {workspace = true}
pallet-utility = {workspace = true}
sp-io = {workspace = true}

[features]
default = ["std"]
std = [
  "codec/std",
  "fc-traits-gas-tank/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "pallet-transaction-payment/std",
  "pallet-utility/std",
  "scale-info/std",
  "sp-io/std",
  "sp-runtime/std",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-transaction-payment/try-runtime",
  "pallet-utility/try-runtime",
  "sp-runtime/try-runtime",
]
