[package]
authors.workspace = true
description = "Allows transactions payment via a prepaid gas method."
edition.workspace = true
license.workspace = true
name = "fc-pallet-gas-transaction-payment"
repository.workspace = true
version = "1.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec.workspace = true
frame.workspace = true
frame-contrib-traits.workspace = true
scale-info.workspace = true

[dev-dependencies]
pallet-balances.workspace = true
pallet-transaction-payment.workspace = true

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-contrib-traits/runtime-benchmarks",
	"frame/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-contrib-traits/std",
	"frame/std",
	"pallet-balances/std",
	"pallet-transaction-payment/std",
	"scale-info/std",
]
try-runtime = [
	"frame/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-transaction-payment/try-runtime",
]
