[package]
authors.workspace = true
description = "Handles listings of exchangable goods and services"
edition.workspace = true
license.workspace = true
name = "fc-pallet-listings"
repository.workspace = true
version = "1.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec.workspace = true
scale-info.workspace = true
fc-traits-listings.workspace = true
frame-benchmarking.workspace = true
frame-support.workspace = true
frame-system.workspace = true
pallet-nfts.workspace = true
sp-io.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
pallet-assets.workspace = true
pallet-balances.workspace = true

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-nfts/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"fc-traits-listings/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-nfts/std",
	"scale-info/std",
	"serde",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"serde?/std"
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-nfts/try-runtime",
	"sp-runtime/try-runtime",
]
