[package]
authors.workspace = true
description = "A system to handle orders of items that exist in the `Listings` subsystem, which can be paid off using the `Payments` subsystem"
edition.workspace = true
license.workspace = true
name = "fc-pallet-orders"
repository.workspace = true
version = "1.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec.workspace = true
frame-contrib-traits.workspace = true
frame-benchmarking = { workspace = true, optional = true }
frame-support.workspace = true
frame-system.workspace = true
scale-info.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true

[dev-dependencies]
pallet-balances.workspace = true

[features]
default = ["std"]

runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-contrib-traits/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]

std = [
  "codec/std",
  "frame-benchmarking/std",
  "frame-contrib-traits/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "scale-info/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
]

try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "pallet-balances/try-runtime",
  "sp-runtime/try-runtime",
]
