[package]
	name = "fc-pallet-pass"
	version = "1.0.0"
	authors.workspace = true
	edition.workspace = true
	license.workspace = true
	repository.workspace = true
	description = "Allows dispatching calls on behalf of a keyless account using an authenticator that resolves alternative signing methods."

	[package.metadata.docs.rs]
		targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
	codec = { workspace = true }
	scale-info = { workspace = true }
	serde = { workspace = true, optional = true }
	impl-trait-for-tuples = { workspace = true }
	frame-benchmarking = { workspace = true, optional = true }
	frame-support = { workspace = true }
	frame-system = { workspace = true }
	log = { workspace = true }
	sp-core = { workspace = true }
	sp-io = { workspace = true }
	sp-runtime = { workspace = true }
	sp-std = { workspace = true }

[dev-dependencies]
	env_logger = { workspace = true }
	pallet-babe = { workspace = true }
	pallet-balances = { workspace = true }
	pallet-scheduler = { workspace = true }
	pallet-timestamp = { workspace = true }

[features]
	default = ["std"]
	runtime-benchmarks = [
		"frame-benchmarking/runtime-benchmarks",
		"frame-support/runtime-benchmarks",
		"frame-system/runtime-benchmarks",
		"pallet-babe/runtime-benchmarks",
		"pallet-balances/runtime-benchmarks",
		"pallet-scheduler/runtime-benchmarks",
		"pallet-timestamp/runtime-benchmarks",
		"sp-runtime/runtime-benchmarks",
	]
	std = [
		"codec/std",
		"frame-benchmarking?/std",
		"frame-support/std",
		"frame-system/std",
		"log/std",
		"pallet-babe/std",
		"pallet-balances/std",
		"pallet-scheduler/std",
		"pallet-timestamp/std",
		"scale-info/std",
		"serde",
		"sp-core/std",
		"sp-io/std",
		"sp-runtime/std",
		"sp-std/std",
	]
	try-runtime = [
		"frame-support/try-runtime",
		"frame-system/try-runtime",
		"pallet-babe/try-runtime",
		"pallet-balances/try-runtime",
		"pallet-scheduler/try-runtime",
		"pallet-timestamp/try-runtime",
		"sp-runtime/try-runtime",
	]
