[package]
authors.workspace = true
description = "Allows dispatching calls on behalf of a keyless account using an authenticator that resolves alternative signing methods."
edition.workspace = true
license.workspace = true
name = "fc-pallet-pass"
repository.workspace = true
version = "1.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec.workspace = true
fc-traits-authn.workspace = true
frame-benchmarking = { workspace = true, optional = true }
frame-support.workspace = true
frame-system.workspace = true
log.workspace = true
scale-info.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true

[dev-dependencies]
pallet-babe.workspace = true
pallet-balances.workspace = true
pallet-scheduler.workspace = true
pallet-transaction-payment.workspace = true
pallet-timestamp.workspace = true
sp-io.workspace = true

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
  "pallet-transaction-payment/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"fc-traits-authn/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"pallet-scheduler/std",
	"pallet-timestamp/std",
  "pallet-transaction-payment/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-timestamp/try-runtime",
  "pallet-transaction-payment/try-runtime",
	"sp-runtime/try-runtime",
]
