[package]
authors.workspace = true
description = "Pallet to manage dynamic governance tracks for pallet referenda"
edition.workspace = true
license.workspace = true
repository.workspace = true
name = "fc-pallet-referenda-tracks"
readme = "README.md"
version = "1.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec.workspace = true
scale-info.workspace = true
serde = { workspace = true, optional = true }
fc-traits-tracks.workspace = true
frame-benchmarking = { workspace = true, optional = true }
frame-support.workspace = true
frame-system.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
pallet-referenda.workspace = true

[dev-dependencies]
pallet-scheduler.workspace = true
pallet-preimage.workspace = true
pallet-balances.workspace = true

[features]
default = ["std"]
runtime-benchmarks = [
	"fc-traits-tracks/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-referenda/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"fc-traits-tracks/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-preimage/std",
	"pallet-referenda/std",
	"pallet-scheduler/std",
	"scale-info/std",
	"serde",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-referenda/try-runtime",
	"pallet-scheduler/try-runtime",
	"sp-runtime/try-runtime",
]
