[package]
name = "fc-traits-authn"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
paste = "1.0"
codec = { workspace = true }
frame-support = { workspace = true }
impl-trait-for-tuples = { workspace = true }
scale-info = { workspace = true }
fc-traits-authn-proc = { workspace = true }

[features]
default = ["std"]
std = ["codec/std", "scale-info/std", "frame-support/std"]
