[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "fc-traits-authn"
repository.workspace = true
version = "0.1.0"

[dependencies]
codec.workspace = true
frame-support.workspace = true
fc-traits-authn-proc.workspace = true
log.workspace = true
scale-info.workspace = true

[features]
default = ["std"]
std = ["codec/std", "frame-support/std", "log/std", "scale-info/std"]
