[package]
name = "fc-traits-memberships"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true


[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
]
