[package]
	name = "fc-traits-memberships"
	version = "0.1.0"
	authors.workspace = true
	edition.workspace = true
	repository.workspace = true
	license.workspace = true

[dependencies]
	codec = { workspace = true }
	scale-info = { workspace = true }
	frame-support = { workspace = true }

[dev-dependencies]
	frame-system = { workspace = true }
	pallet-balances = { workspace = true }
	pallet-nfts = { workspace = true }
	sp-io = { workspace = true }
	sp-runtime = { workspace = true }

[features]
	default = ["std"]
	std = [
		"codec/std",
		"frame-support/std",
		"frame-system/std",
		"pallet-balances/std",
		"pallet-nfts/std",
		"scale-info/std",
		"sp-io/std",
		"sp-runtime/std",
	]
