[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "fc-traits-payments"
repository.workspace = true
version = "0.1.0"

[dependencies]
codec.workspace = true
scale-info.workspace = true
frame-support.workspace = true
impl-trait-for-tuples.workspace = true

[features]
default = ["std"]
std = ["codec/std", "frame-support/std", "scale-info/std"]
