[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "fc-traits-proof-verifier"
repository.workspace = true
version = "0.1.0"

[dependencies]
codec = { workspace = true, features = ["derive"] }
frame-support.workspace = true
scale-info = { workspace = true, features = ["derive"] }
sp-runtime.workspace = true

[features]
default = ["std"]
std = [
  "codec/std",
  "frame-support/std",
  "scale-info/std",
  "sp-runtime/std",
]
