[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "fc-traits-tracks"
repository.workspace = true
version = "0.1.0"

[dependencies]
codec .workspace = true
scale-info .workspace = true
frame-support .workspace = true
pallet-referenda .workspace = true

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"pallet-referenda/std",
]
